# ChangeLog for x11-wm/ion2
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-wm/ion2/Attic/ChangeLog,v 1.3 2004/02/28 10:02:12 twp Exp $

*ion2-20040211-r1 (28 Feb 2004)

  28 Feb 2004; Tom Payne <twp@gentoo.org> ion2-20040211-r1.ebuild :
  Minor ebuild fixes.

*ion2-20040211 (11 Feb 2004)

  11 Feb 2004; Tom Payne <twp@gentoo.org> ion2-20040211.ebuild :
  Added patch from mailing list.

*ion2-20040207 (10 Feb 2004)

  10 Feb 2004; Tom Payne <twp@gentoo.org> ion2-20040207.ebuild :
  New stable release of Ion, moved from x11-wm/ion-devel. Bug # 40915.