@@ -1,10 +1,9 @@
-MD5 c04e5d6c0dd7b8e28ba0ed878b9dde83 ion2-20040207.ebuild 1701
-MD5 d992d28bec4a3bfd72b441145091a58e metadata.xml 244
-MD5 c8b4e67a767a19665b27f011426beef1 ChangeLog 620
-MD5 9be7f2e2e5b76586305b2c2c8107d942 ion2-20040211.ebuild 1773
+MD5 549a25bb2c2749709c9b23d2253e074d ion2-20040211-r2.ebuild 1853
 MD5 78dce7c7df1298db481e360e1ec6063e ion2-20040211-r1.ebuild 1790
-MD5 16c6e0f00bd204d2f612b781d7b73f54 files/xftde-20040207.patch 18552
-MD5 91e9228c6c714b8031f826c8523a2274 files/digest-ion2-20040207 66
+MD5 d47fe509dd330f2f3464ed128a70787e ChangeLog 786
+MD5 d992d28bec4a3bfd72b441145091a58e metadata.xml 244
 MD5 0b7705816fa1d59203e2ebd35db2632d files/ion2-20040207-20040211.patch 8684
-MD5 91e9228c6c714b8031f826c8523a2274 files/digest-ion2-20040211 66
+MD5 16c6e0f00bd204d2f612b781d7b73f54 files/xftde-20040207.patch 18552
+MD5 aac436d9230b2b3cda72feb184295c1a files/ion2.desktop 214
 MD5 91e9228c6c714b8031f826c8523a2274 files/digest-ion2-20040211-r1 66
+MD5 91e9228c6c714b8031f826c8523a2274 files/digest-ion2-20040211-r2 66
