@@ -1,0 +1,9 @@
+[Desktop Entry]
+Encoding=UTF-8
+Name=Ion
+Comment=A tiling tabbed window manager designed with keyboard users in mind.
+Exec=ion
+TryExec=ion
+# no icon yet, only the top three are currently used
+Icon=
+Type=Application
